--- a/config/config.json
+++ b/config/config.json
@@ -1,10 +1,8 @@
 {
   "development": {
-    "username": "root",
-    "password": null,
-    "database": "database_development",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
+    "url":"postgres://jaaebmqu:zUhieA3I8TOpXeLzGAH92JV5b3Yr6yEG@balarama.db.elephantsql.com:5432/jaaebmqu",
+    "dialect": "mysql",
+    "operatorsAliases":"0"
   },
   "test": {
     "username": "root",
