set express server

--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "url":"postgres://jaaebmqu:zUhieA3I8TOpXeLzGAH92JV5b3Yr6yEG@balarama.db.elephantsql.com:5432/jaaebmqu",
-    "dialect": "mysql",
+    "dialect": "postgres",
     "operatorsAliases":"0"
   },
   "test": {
